# gnuboy

./: .gitignore  CMakeLists.txt  GNUBoy.aps  GNUBoy.icns  GNUBoy.rc  Info.plist  Makefile  Makefile.in  README  configure.ac  cpu.c  debug.c  defs.h  emu.c  exports.c  ezmenu.h  fastmem.c  fastmem.h  inflate.c  keytable.c  lcd.c  loader.c  main.c  mem.c  menu.c  newsound.c  palette.c  partitions.csv  partitions_lfs.csv  path.c  rccmds.c  rcfile.c  rckeys.c  rcvars.c  refresh.h  rtc.c  sdkconfig  sdkconfig.old  sound.c  sound.h  (+1 more)
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
components/SDL/src/audio/: SDL_audio.c
components/SDL/src/joystick/esp/: SDL_sysjoystick.c
components/SDL/src/video/esp-idf/: SDL_espidfvideo.c
components/SDL3_net/: CMakeLists.txt  component.mk
components/esp_bsp_generic/: Kconfig
components/esp_bsp_generic/src/: esp_bsp_generic.c
components/gnuboy/: CMakeLists.txt  Kconfig  cpu.c  cpu.h  cpucore.h  cpuregs.h  defs.h  emu.c  emu.h  events.c  exports.c  exports.h  ezmenu.h  fastmem.c  fastmem.h  fb.h  font5x7.h  hw.c  hw.h  inflate.c  inflate.h  input.h  keytable.c  lcd.c  lcd.h  lcdc.c  lcdc.h  loader.c  loader.h  mem.c  menu.c  miniz.h  miniz_tinfl.c  newsound.c  noise.h  palette.c  palette.h  path.c  pcm.h  rc.h  (+16 more)
main/: CMakeLists.txt  main.c
release_esp32/: build_release.sh  tile.raw
sys/dos/: dos.c
sys/esp/: map.c  nix.c
sys/linux/: fbdev.c
sys/nix/: config.h.in  map.c  nix.c
sys/sdl2/: sdl2.c
sys/sdl3/: keymap.c  sdl-audio.c  sdl-joystick.c  sdl3.c
sys/windows/: windows.c
visualc/GNUBoy/: GNUBoy.sln  GNUBoy.vcxproj  GNUBoy.vcxproj.filters
visualc/GNUBoy/GNUBoy/ARM64/Debug/: GNUBoy.exe.recipe  GNUBoy.ilk  vc143.idb
visualc/GNUBoy/GNUBoy/ARM64/Debug/GNUBoy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  (+8 more)
visualc/GNUBoy/GNUBoy/ARM64/Release/: GNUBoy.exe.recipe  GNUBoy.iobj
visualc/GNUBoy/GNUBoy/Release/: GNUBoy.exe.recipe  GNUBoy.iobj  GNUBoy.ipdb  GNUBoy.res
visualc/GNUBoy/GNUBoy/Release/GNUBoy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GNUBoy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
visualc/GNUBoy/GNUBoy/x64/Release/: GNUBoy.exe.recipe  GNUBoy.iobj  GNUBoy.ipdb
xz/: xz_dec_lzma2.c  xz_dec_stream.c
(+22 files in other folders)
